# points-list

./: LICENSE  README.md
api/: pyproject.toml
api/app/: .env.example  .gitignore  settings.py  urls.py
api/points/: models.py  serializers.py  views.py
api/points/migrations/: 0001_initial.py
www/: .env.example  package.json  vite.config.js
www/src/: App.vue  main.js
www/src/app/api/: index.js  points.js  resource.js
www/src/components/: PointForm.vue  PointList.vue
www/src/layout/: Default.vue
www/src/router/: index.js
www/src/stores/: points.js
www/src/views/: Points.vue
